<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationBlog</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to MyApp !</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="preview">Preview</string>
    <string name="topics">Topics</string>
    <string name="replies">Replies</string>
    <string name="location">Location</string>
    <string name="default_location">Latitude \nLongitude</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="commit">Commit</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="like">Like</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorite">Favorite Comments</string>
    <string name="my_comment">My Comments</string>
    <string name="comment_info">Author TimePosted \nPosted at Location</string>
    <string name="title_activity_comment_page">CommentPageActivity</string>
    <string name="title_edit_activity_comment_page">EditCommentPageActivity</string>
    <string name="title_activity_sort_page">SortPageActivity</string>
    <string name="sort_by_my_location">Sort By My Location</string>
    <string name="sort_by_other_location">Sort By Ohter Location</string>
    <string name="sort_by_picture">Sort By Picture</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="title_activity_profile_page">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="user_name_hint">Enter your user name</string>
    <string name="biography">Biography</string>
    <string name="biography_hint">Enter your biography</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_hint">Enter your twitter</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_hint">Enter your facebook</string>
    <string name="title_activity_favorite_page">My Favoriate</string>
    <string name="title_activity_my_comment_page">MyCommentPageActivity</string>
    <string name="title_activity_create_comment_page">CreateCommentPageActivity</string>
    <string name="login_ins">Login</string>
    <string name="userName_ins">User Name:</string>
    <string name="defaultCommentText">&quot;Default Text&quot;</string>
    <string name="defaultUserName_timePosted">Default username &amp;&amp; time posted</string>
    <string name="defaultLocation">Latitude \nLongitude</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_user_info_page">UserInfoPage</string>
    <string name="attachpicture">Attach \npicture</string>
    <string name="typeinthecontents">Type in the contents</string>
    <string name="enternewusername">Please enter a new username</string>
    <string name="goback">go back</string>
    <string name="viewedhistory">Viewed history</string>
    <string name="laterlist">Later list</string>
    <string name="userinfotext">userinfomation</string>
    <string name="userinfobutton">Profile</string>
    <string name="publishbutton">Create new</string>
    <string name="resetnamebutton">Reset name</string>
    <string name="viewedhistorybutton">Viewed history</string>
    <string name="favouriteselect">Favourites</string>
    <string name="logoutbutton">Logout</string>
    <string name="userinfopagetitle">The User Name</string>
    <string name="topiccontenttext">comment or topic contents</string>
    <string name="topicTitleText">comment title</string>
    <string name="authorinfo">author/ publish date/ publish location</string>
    <string name="readlater">Read later</string>
    <string name="sortscore">Sort by score</string>
    <string name="sortbyotherlocation">Sort by other location</string>
    <string name="sortbypicture">Sort by picture</string>
    <string name="sortbymylocation">Sort by my location</string>
    <string name="title_activity_sort_option">SortOptionActivity</string>
    <string name="title_activity_view_history">ViewHistoryActivity</string>
    <string name="title_activity_view_fav">ViewFavActivity</string>
    <string name="title_activity_ResetUserName">Reset the usename</string>
    <string name="title_activity_EditPage">Edit Page</string>
    <string name="thenewslist">The News List</string>
    <string name="thegreatest">The Greatest News</string>
    <string name="title_activity_publish">Publish a new Comment</string>
    <string name="refresh_ins">Refresh</string>
    <string name="sync">Sync</string>
    <string name="topic_info">author/ publish date/ publish location</string>
    <string name="titlename">Type in the title</string>
    <string name="enter_userName_ins">Enter your user name here</string>
    <string name="image_preview_ins">Image preview</string>
    <string name="reset_user_name_ins">Enter your new User Name here</string>
    <string name="attached_pic_dis">Preview</string>
    <string name="title_activity_CacheComment">ViewCacheCommentPage</string>
    <string name="welcome_image_description">Welcome Image</string>
    <string name="title_activity_local_comment_page">LocalCommentPageActivity</string>
    <string name="prompt_for_location">Enter a desired location:</string>
    <string name="title_activity_other_profile_page">OtherProfilePageActivity</string>
    <string name="view_other_profile">View Author Profile</string>

</resources>
