<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/action_sort"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@drawable/sort"
        android:title="@string/sort"/>
    
    <item 
        android:id="@+id/action_refresh"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"/>
    
    <item 
        android:id="@+id/action_create"
        android:orderInCategory="30"
        android:showAsAction="always"
        android:icon="@drawable/create"
        android:title="@string/create"/>
    
    <item 
        android:id="@+id/action_profile"
        android:orderInCategory="40"
        android:showAsAction="always"
        android:icon="@drawable/user"
        android:title="@string/profile" />

</menu>
