<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ProfilePageActivity" >

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <ImageButton
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:contentDescription="@string/profile_picture"
        android:src="@drawable/picture" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/user_name_hint" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/biography" />

    <EditText
        android:id="@+id/biography"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biography_hint" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/twitter" />

    <EditText
        android:id="@+id/twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/twitter_hint" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/facebook" />

    <EditText
        android:id="@+id/facebook"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/facebook_hint" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" >

        <ImageButton
            android:id="@+id/cancel_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#000000"
            android:contentDescription="@string/cancel"
            android:src="@drawable/cancel_2" />

        <ImageButton
            android:id="@+id/commit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#000000"
            android:contentDescription="@string/commit"
            android:src="@drawable/commit_2" />

    </RelativeLayout>

</LinearLayout>