<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/create_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/content"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" >

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/location"
            android:src="@drawable/pin_2" >
        </ImageButton>

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="3dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/location_button"
            android:text="@string/default_location" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/create_image_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/preview"
        android:src="@drawable/instagram" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/create_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/commit"
            android:src="@drawable/tick" />
        <ImageButton
            android:id="@+id/create_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/cancel"
            android:src="@drawable/close" />
    </RelativeLayout>

</LinearLayout>