<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp" >

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" >
    </EditText>

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/content"
        android:scrollbars="vertical" >
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" >

        <ImageButton
            android:id="@+id/location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#000000"
            android:contentDescription="@string/location"
            android:src="@drawable/location" />

        <LinearLayout
            android:id="@+id/edit_location_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/latitude" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/longitude" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/edit_location_string"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/latitude" />

            <EditText
                android:id="@+id/edit_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/longitude" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/edit_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/preview" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/edit_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#000000"
            android:contentDescription="@string/commit"
            android:src="@drawable/commit_2" />

        <ImageButton
            android:id="@+id/edit_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="#000000"
            android:contentDescription="@string/cancel"
            android:src="@drawable/cancel_2" />
    </RelativeLayout>

</LinearLayout>