<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/comment_text"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/defaultCommentText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#aaa555"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/comment_pic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.25"
            android:contentDescription="@string/attachpicture"
            android:src="@android:drawable/alert_light_frame" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/user_name_and_time_posted"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/defaultUserName_timePosted" />

</LinearLayout>