<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ProfilePageActivity" >

    <TextView
        android:id="@+id/other_profile_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ImageView
        android:id="@+id/other_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_picture" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/biography" />

    <TextView
        android:id="@+id/other_profile_biography"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/twitter" />

    <TextView
        android:id="@+id/other_profile_twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/facebook" />

    <TextView
        android:id="@+id/other_profile_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="#aaa" />

</LinearLayout>